# racer_explore

./: README.md  gazebo.rviz  gazebo.sh  run.sh
devel/: .catkin  _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
gazebo/: car1.xacro  kinect.xacro  lidar.xacro  racer.xacro
gazebo/world/: map0.world  map1.world  map2.world  map3.world  racer.world
logs/active_perception/: build.cmake.002.log.stderr  build.make.000.log.stderr  build.make.008.log.stderr  build.make.010.log.stderr  build.make.011.log.stderr  build.make.022.log.stderr  build.make.038.log.stderr  build.make.039.log.stderr  build.make.041.log.stderr  build.make.043.log.stderr  build.make.044.log.stderr  build.make.045.log.stderr  build.make.049.log.stderr  build.make.050.log.stderr  build.make.051.log.stderr  build.make.053.log.stderr  build.make.054.log.stderr  build.make.058.log.stderr  build.make.060.log.stderr  build.make.061.log.stderr  build.make.062.log.stderr  build.make.080.log.stderr  build.make.082.log.stderr  build.make.084.log.stderr  build.make.132.log.stderr  build.make.133.log.stderr  build.make.149.log.stderr  build.make.153.log.stderr  build.make.154.log.stderr  build.make.158.log.stderr  build.make.159.log.stderr  build.make.160.log.stderr  (+9 more)
src/RACER/swarm_exploration/msg_set/: CMakeLists.txt  README.md  build.bash
src/RACER/swarm_exploration/msg_set/config/: algo_id.yaml  mission_type.yaml
src/RACER/swarm_exploration/msg_set/include/: math_utils.h  robot_state.h
src/RACER/swarm_exploration/msg_set/spdlog/: .gitignore
(+931 files in other folders)
